# backtranslate

./: .gitignore  .travis.yml  LICENSE.md  README.md  README.rst  heatmap.ipynb  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: python-package.yml
backtranslate/: __init__.py  backtranslate.py  cli.py  find_stops.py  stop.py  util.py
data/: mhv.fa  reference.fa  sample_6.fa
docs/: api.rst  conf.py  credits.rst  install.rst  introduction.rst  library.rst  usage.rst
examples/: heatmap.ipynb
misc/: test.py
mutalyzer_backtranslate/: __init__.py  backtranslate.py  cli.py  util.py
stop/: backtranslate.py  stop.py
tests/: test_backtranslate.py  test_cli.py
