[metadata]
name = backtranslate
version = 0.1.1
description = Functions for reverse translation.
long_description = file: README.rst
author = LUMC, Jeroen F.J. Laros
author_email = J.F.J.Laros@lumc.nl
url = https://github.com/mutalyzer/backtranslate
keywords = bioinformatics
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
copyright = 2015-2019

[options]
packages = find:
install_requires =
    biopython
    configparser
    python-Levenshtein

[options.package_data]
backtranslate = setup.cfg

[options.entry_points]
console_scripts =
    backtranslate = backtranslate.cli:main
