[metadata]
name = mutalyzer_backtranslate
version = 0.1.3
description = Functions for reverse translation.
long_description = file: README.rst
author = LUMC, Jeroen F.J. Laros
author_email = J.F.J.Laros@lumc.nl
url = https://github.com/mutalyzer/backtranslate
keywords = bioinformatics
license = MIT
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    biopython>=1.76
    python-Levenshtein==0.12.0
tests_require =
    fake-open==0.0.1
    pytest==4.0.1

[options.entry_points]
console_scripts =
    backtranslate = mutalyzer_backtranslate.cli:main
